--- a/taskApp/Base.lproj/Main.storyboard
+++ b/taskApp/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="fEk-gE-7hN">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -19,7 +19,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="g68-gQ-wSI">
-                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="623"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="Cell" textLabel="2yV-7q-Glg" detailTextLabel="dI0-vE-jby" style="IBUITableViewCellStyleSubtitle" id="xG6-JL-9eW">
@@ -58,13 +58,123 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <toolbarItems>
+                        <barButtonItem id="cid-CO-2yH"/>
+                        <barButtonItem id="mns-Lk-AGZ"/>
+                    </toolbarItems>
+                    <navigationItem key="navigationItem" id="uci-PV-XbM">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="f0g-cS-ihb">
+                            <connections>
+                                <segue destination="qKS-4x-pUd" kind="show" id="xFn-3T-KBJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="tableView" destination="g68-gQ-wSI" id="2mp-lz-o0u"/>
+                        <segue destination="qKS-4x-pUd" kind="show" identifier="cellSegue" id="Mw9-IN-rM2"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1076" y="133.5832083958021"/>
+        </scene>
+        <!--Input View Controller-->
+        <scene sceneID="2rY-tG-2AM">
+            <objects>
+                <viewController id="qKS-4x-pUd" customClass="InputViewController" customModule="taskApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="NDZ-cp-7Wx">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タイトル" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bgs-4A-la8" userLabel="タイトル">
+                                <rect key="frame" x="10" y="74" width="355" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                                <size key="shadowOffset" width="0.0" height="0.0"/>
+                            </label>
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ycn-Zh-DtM">
+                                <rect key="frame" x="10" y="104.5" width="355" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="内容" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w4y-5i-cYv">
+                                <rect key="frame" x="10" y="144.5" width="355" height="20.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="タスク内容" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="gKi-hW-Igh">
+                                <rect key="frame" x="10" y="175" width="355" height="120"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="jNQ-sd-K71"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                            </textView>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="Bkn-wY-i3t">
+                                <rect key="frame" x="0.0" y="305" width="375" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="Qx2-PM-Pxk"/>
+                                </constraints>
+                                <date key="date" timeIntervalSinceReferenceDate="544759542.20168805">
+                                    <!--2018-04-07 02:05:42 +0000-->
+                                </date>
+                            </datePicker>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="w4y-5i-cYv" firstAttribute="top" secondItem="ycn-Zh-DtM" secondAttribute="bottom" constant="10" id="88g-RU-A2h"/>
+                            <constraint firstAttribute="trailing" secondItem="Bkn-wY-i3t" secondAttribute="trailing" id="CxZ-E2-HIu"/>
+                            <constraint firstItem="bgs-4A-la8" firstAttribute="leading" secondItem="Xw4-k1-Vw3" secondAttribute="leading" constant="10" id="H1r-F9-Jtw"/>
+                            <constraint firstItem="bgs-4A-la8" firstAttribute="top" secondItem="Xw4-k1-Vw3" secondAttribute="top" constant="10" id="XGq-Ql-7xE"/>
+                            <constraint firstItem="gKi-hW-Igh" firstAttribute="leading" secondItem="Xw4-k1-Vw3" secondAttribute="leading" constant="10" id="Xqb-64-vOf"/>
+                            <constraint firstItem="Xw4-k1-Vw3" firstAttribute="trailing" secondItem="ycn-Zh-DtM" secondAttribute="trailing" constant="10" id="ZvH-Zb-jKk"/>
+                            <constraint firstItem="w4y-5i-cYv" firstAttribute="leading" secondItem="Xw4-k1-Vw3" secondAttribute="leading" constant="10" id="bSo-8R-hVd"/>
+                            <constraint firstItem="Bkn-wY-i3t" firstAttribute="leading" secondItem="Xw4-k1-Vw3" secondAttribute="leading" id="e2f-dV-IJA"/>
+                            <constraint firstItem="gKi-hW-Igh" firstAttribute="top" secondItem="w4y-5i-cYv" secondAttribute="bottom" constant="10" id="kik-Lx-nNJ"/>
+                            <constraint firstItem="Bkn-wY-i3t" firstAttribute="top" secondItem="gKi-hW-Igh" secondAttribute="bottom" constant="10" id="rci-EG-nz1"/>
+                            <constraint firstItem="ycn-Zh-DtM" firstAttribute="top" secondItem="bgs-4A-la8" secondAttribute="bottom" constant="10" id="saO-Zg-e6c"/>
+                            <constraint firstItem="ycn-Zh-DtM" firstAttribute="leading" secondItem="Xw4-k1-Vw3" secondAttribute="leading" constant="10" id="xCe-kf-aGo"/>
+                            <constraint firstItem="Xw4-k1-Vw3" firstAttribute="trailing" secondItem="bgs-4A-la8" secondAttribute="trailing" constant="10" id="yjy-cS-VLp"/>
+                            <constraint firstItem="Xw4-k1-Vw3" firstAttribute="trailing" secondItem="w4y-5i-cYv" secondAttribute="trailing" constant="10" id="ztJ-vY-JsH"/>
+                            <constraint firstItem="Xw4-k1-Vw3" firstAttribute="trailing" secondItem="gKi-hW-Igh" secondAttribute="trailing" constant="10" id="zzh-4p-BZd"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="Xw4-k1-Vw3"/>
+                    </view>
+                    <connections>
+                        <outlet property="contentsTextView" destination="gKi-hW-Igh" id="P4N-Oa-onc"/>
+                        <outlet property="dataPicker" destination="Bkn-wY-i3t" id="A08-RY-TkW"/>
+                        <outlet property="titleTextField" destination="ycn-Zh-DtM" id="VZ7-dy-uoh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="fp5-dQ-iTG" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1768.8" y="133.5832083958021"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="Psj-zj-LZI">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="fEk-gE-7hN" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="R4B-UH-XmU">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="opp-LQ-ibK"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Lij-lX-WYu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="136.80000000000001" y="133.5832083958021"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="Mw9-IN-rM2"/>
+    </inferredMetricsTieBreakers>
 </document>
